<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/MainAct_CircleImageViewAvatar"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/MainAct_TextViewLogin"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="380dp"
        android:text="@string/MainAct_TextViewLogin"
        android:textColor="@color/purple_500"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainAct_CircleImageViewAvatar" />

    <TextView
        android:id="@+id/MainAct_TextViewName"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/MainAct_TextViewName"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainAct_TextViewLogin" />

    <Button
        android:id="@+id/MainAct_ButtonEditProfile"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:text="@string/MainAct_ButtonEditProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/MainAct_ButtonMyPhotos"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:text="@string/MainAct_ButtonMyPhotos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <Button
        android:id="@+id/MainAct_ButtonAllPhotos"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:text="@string/MainAct_ButtonAllPhotos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <Button
        android:id="@+id/MainAct_ButtonAddPhoto"
        android:layout_width="298dp"
        android:layout_height="45dp"
        android:text="@string/MainAct_ButtonAddPhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/MainAct_ButtonLogout"
        android:layout_width="211dp"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:text="@string/MainAct_ButtonLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/MainAct_TextViewDisc"
        android:layout_width="366dp"
        android:layout_height="65dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:textColor="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainAct_TextViewName" />


</androidx.constraintlayout.widget.ConstraintLayout>