<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    tools:ignore="ExtraText">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/RegistrationAct_CircleImageViewAvatar"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/default_avatar" />

    <EditText
        android:id="@+id/AdapterAct_TextViewLogin"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:hint="@string/RegistrationAct_EditTextLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/EditProfileAct_EditTextName"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:hint="@string/RegistrationAct_EditTextName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/RegistrationAct_EditTextDisc"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:hint="@string/RegistrationAct_EditTextDisc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <EditText
        android:id="@+id/RegistrationAct_EditTextPassword"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <EditText
        android:id="@+id/RegistrationAct_EditTextPasswordAgain"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <Button
        android:id="@+id/RegistrationAct_ButtonRegiter"
        android:layout_width="218dp"
        android:layout_height="46dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationAct_EditTextPasswordAgain"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/RegistrationAct_TextViewAlert"
        android:layout_width="270dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toTopOf="@+id/RegistrationAct_ButtonRegiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationAct_EditTextPasswordAgain"
        app:layout_constraintVertical_bias="0.404" />


</androidx.constraintlayout.widget.ConstraintLayout>